Commit For PK-618

--- a/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/DiscountCode.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/DiscountCode.razor
@@ -83,8 +83,8 @@
                                 Caption="@L["Quantity"]">
                     <DisplayTemplate>
                         <AntDesign.Progress  Percent=@context.AvailableQuantity ShowInfo="false" />
-                        <br />
-                        <Span>@context.TotalQuantity @L["discountcode"]</Span>
+                       @*  <br />
+                        <Span>@context.TotalQuantity @L["discountcode"]</Span> *@
                         <br />
                         <Span>@context.AvailableQuantity @L["available"]</Span>
                     </DisplayTemplate>
