--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -99,14 +99,14 @@
                 {
                     <Button Type="@ButtonType.Button" disabled Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
-                        @L["Print Shipped Label"]
+                        @L["PrintShippedLabel"]
                     </Button>
                 }
                 else
                 {
                     <Button Type="@ButtonType.Button" Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
-                        @L["Print Shipped Label"]
+                        @L["PrintShippedLabel"]
                     </Button>
                 }
             }
@@ -119,23 +119,46 @@
                             Disabled 
                             Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print" />
-                        @L["Generate Delivery Number"]
+                        @L["GenerateDeliveryNumber"]
                     </Button>
                 }
-                else
+                else if (Orders.Where(x => x.IsSelected && (x.DeliveryMethod is EnumValues.DeliveryMethod.SelfPickup || 
+                                           x.DeliveryMethod is EnumValues.DeliveryMethod.HomeDelivery)).Count() >= 1)
+                {
+                    <Dropdown Display="Display.Inline">
+                        <DropdownToggle Color="Color.Primary" Size="Size.Small">
+                            @L["GenerateDeliveryNumber"]
+                        </DropdownToggle>
+                        <DropdownMenu>
+                            <DropdownItem Clicked="ShippingStatusChange"
+                                          Disabled="@(Orders.Any(w => w.DeliveryMethod is EnumValues.DeliveryMethod.SelfPickup) is false ||
+                                                      Orders.Any(w => w.DeliveryMethod is EnumValues.DeliveryMethod.HomeDelivery))">
+                                @L["SelfPickupShipping"]
+                            </DropdownItem>
+
+                            <DropdownItem Clicked="ShippingStatusChange"
+                                          Disabled="@(Orders.Any(w => w.DeliveryMethod is EnumValues.DeliveryMethod.HomeDelivery) is false ||
+                                                      Orders.Any(w => w.DeliveryMethod is EnumValues.DeliveryMethod.SelfPickup))">
+                                @L["PersonalDeliveryShipping"]
+                            </DropdownItem>
+                        </DropdownMenu>
+                    </Dropdown>
+                }
+                else if (!Orders.Any(a => a.IsSelected && (a.DeliveryMethod == EnumValues.DeliveryMethod.SelfPickup || 
+                                          a.DeliveryMethod == EnumValues.DeliveryMethod.HomeDelivery)))
                 { 
                     <Button Type="@ButtonType.Button" 
                             Clicked="OnGenerateDeliveryNumber"
                             Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print" />
-                        @L["Generate Delivery Number"]
+                        @L["GenerateDeliveryNumber"]
                     </Button>
                 }
             }
 
             @if (SelectedTabName is PikachuResource.Shipped)
             {
-                @if ((Orders.Where(x => x.IsSelected).Count() != 1) || (Orders.Where(x => x.InvoiceNumber != null && x.IsSelected).Any()))
+                @if (Orders.Where(x => x.IsSelected).Count() < 1)
                 {
                     <Button Type="@ButtonType.Button" disabled Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
@@ -144,7 +167,9 @@
                 }
                 else
                 { 
-                    <Button Type="@ButtonType.Button" Class="ms-1 btn btn-sm btn-primary">
+                    <Button Type="@ButtonType.Button"
+                            Clicked="OrderItemDelivered"
+                    Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
                         @L["Delivered"]
                     </Button>
@@ -153,18 +178,20 @@
 
             @if (SelectedTabName is PikachuResource.Delivered)
             {
-                @if ((Orders.Where(x => x.IsSelected).Count() != 1) || (Orders.Where(x => x.InvoiceNumber != null && x.IsSelected).Any()))
+                @if (Orders.Where(x => x.IsSelected).Count() < 1)
                 {
                     <Button Type="@ButtonType.Button" disabled Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
-                        @L["Picked Up"]
+                        @L["PickedUp"]
                     </Button>
                 }
                 else
                 { 
-                    <Button Type="@ButtonType.Button" Class="ms-1 btn btn-sm btn-primary">
+                    <Button Type="@ButtonType.Button"
+                            Clicked="OrderItemPickedUp"
+                    Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
-                        @L["Picked Up"]
+                        @L["PickedUp"]
                     </Button>
                 }
             }
@@ -229,14 +256,14 @@
                 {
                     <Button Type="@ButtonType.Button" disabled Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
-                        @L["Close Order"]
+                        @L["CloseOrder"]
                     </Button>
                 }
                 else
                 {
                     <Button Type="@ButtonType.Button" Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
-                        @L["Close Order"]
+                        @L["CloseOrder"]
                     </Button>
                 }
             } 
