--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantSettings.razor
@@ -32,7 +32,7 @@
     </Card>
     <Form>
         <Validations @ref="@ValidationsRef" Model="@Entity" ValidateOnLoad="false">
-            <Tabs SelectedTab="@SelectedTab" SelectedTabChanged="@OnSelectedTabChanged">
+            <Tabs SelectedTab="@SelectedTab" SelectedTabChanged="@OnSelectedTabChanged" RenderMode="TabsRenderMode.LazyLoad">
                 <Items>
                     <Tab Name="TenantInformation">@L["TenantInformation"]</Tab>
                     <Tab Name="CustomerServiceInformation">@L["CustomerServiceInformation"]</Tab>
@@ -49,173 +49,10 @@
                         <CustomerService AppService="TenantSettingsAppService"></CustomerService>
                     </TabPanel>
                     <TabPanel Name="PrivacyPolicy">
-                        <Card>
-                            <CardBody>
-                                <Row>
-                                    <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
-                                        <h4>@L["PrivacyPolicy"]</h4>
-                                    </Column>
-                                    <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
-                                        <Validation MessageLocalizer="@LH.Localize">
-                                            <Field>
-                                                <Div Class="d-flex align-items-center justify-content-between mb-1">
-                                                    <FieldLabel Class="m-0">@L["SpecifyCompanyPrivacyPolicy"]<Span> *</Span></FieldLabel>
-                                                    <PikachuButton Class="pk-btn-sm pk-btn-outline-primary"
-                                                                   Clicked="SetDefaultPrivacyPolicy">@L["DefaultPrivacyPolicy"]</PikachuButton>
-                                                </Div>
-                                                <BlazoredTextEditor @ref="@PrivacyPolicyHtml">
-                                                    <ToolbarContent>
-                                                        <select class="ql-header">
-                                                            <option selected=""></option>
-                                                            <option value="1"></option>
-                                                            <option value="2"></option>
-                                                            <option value="3"></option>
-                                                            <option value="4"></option>
-                                                            <option value="5"></option>
-                                                        </select>
-                                                        <span class="ql-formats">
-                                                            <button class="ql-bold"></button>
-                                                            <button class="ql-italic"></button>
-                                                            <button class="ql-underline"></button>
-                                                            <button class="ql-strike"></button>
-                                                        </span>
-                                                        <span class="ql-formats">
-                                                            <select class="ql-color"></select>
-                                                            <select class="ql-background"></select>
-                                                        </span>
-                                                        <span class="ql-formats">
-                                                            <button class="ql-list" value="ordered"></button>
-                                                            <button class="ql-list" value="bullet"></button>
-                                                        </span>
-                                                        <span class="ql-formats">
-                                                            <button class="ql-link"></button>
-                                                        </span>
-                                                        <span class="ql-formats">
-                                                            <button class="ql-image"></button>
-                                                        </span>
-                                                        <span class="ql-formats">
-                                                            <button class="ql-video"></button>
-                                                        </span>
-                                                    </ToolbarContent>
-                                                </BlazoredTextEditor>
-                                                <MemoEdit Rows="5" @bind-Text="Entity.PrivacyPolicy" Visibility="Visibility.Invisible" Style="height: 0; margin: 0; padding: 0;">
-                                                    <Feedback>
-                                                        <ValidationError />
-                                                    </Feedback>
-                                                </MemoEdit>
-                                            </Field>
-                                        </Validation>
-                                    </Column>
-                                </Row>
-                            </CardBody>
-                        </Card>
+                        <TenantPrivacyPolicy AppService="TenantSettingsAppService"></TenantPrivacyPolicy>
                     </TabPanel>
                     <TabPanel Name="FrontendInformation">
-                        <Card>
-                            <CardBody>
-                                <Row>
-                                    <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
-                                        <h4>@L["FrontendInformation"]</h4>
-                                    </Column>
-                                    <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
-                                        <Validation MessageLocalizer="@LH.Localize">
-                                            <Field>
-                                                <FieldLabel>@L["WebpageTitle"]<Span> *</Span></FieldLabel>
-                                                <TextEdit @bind-Text="Entity.WebpageTitle">
-                                                    <Feedback>
-                                                        <ValidationError />
-                                                    </Feedback>
-                                                </TextEdit>
-                                            </Field>
-                                        </Validation>
-                                    </Column>
-                                </Row>
-                                <Divider></Divider>
-                                <Row>
-                                    <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
-                                        <h4>@L["Logo"]</h4>
-                                        @if (Entity.LogoBase64 != null)
-                                        {
-                                            <Div Class="image-thumbnail">
-                                                <img src="@("data:image/png;base64," + Entity.LogoBase64)" class="img-fluid" />
-                                            </Div>
-                                        }
-                                        else if (Entity.LogoUrl != null)
-                                        {
-                                            <Div Class="image-thumbnail">
-                                                <img src="@Entity.LogoUrl" class="img-fluid" />
-                                            </Div>
-                                        }
-                                    </Column>
-                                    <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
-                                        <Field Class="container-less-filepicker">
-                                            <FilePicker Changed="@((e) => OnFileUploadAsync(e, "logo"))"
-                                                        ShowMode="FilePickerShowMode.List"
-                                                        Accept="@(string.Join(", ", Constant.ValidImageExtensions))">
-                                                <FileTemplate></FileTemplate>
-                                                <ButtonsTemplate></ButtonsTemplate>
-                                            </FilePicker>
-                                        </Field>
-                                    </Column>
-                                </Row>
-                                <Divider></Divider>
-                                <Row>
-                                    <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
-                                        <h4>@L["Banner"]</h4>
-                                        @if (Entity.BannerBase64 != null)
-                                        {
-                                            <Div Class="image-thumbnail">
-                                                <img src="@("data:image/png;base64," + Entity.BannerBase64)" class="img-fluid" />
-                                            </Div>
-                                        }
-                                        else if (Entity.BannerUrl != null)
-                                        {
-                                            <Div Class="image-thumbnail">
-                                                <img src="@Entity.BannerUrl" class="img-fluid" />
-                                            </Div>
-                                        }
-                                    </Column>
-                                    <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
-                                        <Field Class="container-less-filepicker">
-                                            <FilePicker Changed="@((e) => OnFileUploadAsync(e, "banner"))"
-                                                        ShowMode="FilePickerShowMode.List"
-                                                        Accept="@(string.Join(", ", Constant.ValidImageExtensions))">
-                                                <FileTemplate></FileTemplate>
-                                                <ButtonsTemplate></ButtonsTemplate>
-                                            </FilePicker>
-                                        </Field>
-                                    </Column>
-                                </Row>
-                                <Divider></Divider>
-                                <Row>
-                                    <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
-                                        <h4>@L["Favicon"]</h4>
-                                        @if (Entity.FaviconBase64 != null)
-                                        {
-                                            <Div Class="image-thumbnail">
-                                                <img src="@("data:image/png;base64," + Entity.FaviconBase64)" class="img-fluid" />
-                                            </Div>
-                                        }
-                                        else if (Entity.FaviconUrl != null)
-                                        {
-                                            <Div Class="image-thumbnail">
-                                                <img src="@Entity.FaviconUrl" class="img-fluid" />
-                                            </Div>
-                                        }
-                                    </Column>
-                                    <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
-                                        <Field Class="container-less-filepicker">
-                                            <FilePicker Changed="@((e) => OnFileUploadAsync(e, "favicon"))"
-                                                        ShowMode="FilePickerShowMode.List"
-                                                        Accept="@(string.Join(", ", Constant.ValidFaviconExtensions))">
-                                                <FileTemplate></FileTemplate>
-                                                <ButtonsTemplate></ButtonsTemplate>
-                                            </FilePicker>
-                                        </Field>
-                                    </Column>
-                                </Row>
-                            </CardBody>
-                        </Card>
+                        <TenantFrontendInformation AppService="TenantSettingsAppService"></TenantFrontendInformation>
                     </TabPanel>
                     <TabPanel Name="SocialMedia">
                         <Card>
