#PK-420 Tenant Settings Updates

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantSettings.razor
@@ -46,7 +46,7 @@
                         <TenantInformation AppService="TenantSettingsAppService"></TenantInformation>
                     </TabPanel>
                     <TabPanel Name="CustomerServiceInformation">
-                        <CustomerService AppService="TenantSettingsAppService"></CustomerService>
+                        <TenantCustomerService AppService="TenantSettingsAppService"></TenantCustomerService>
                     </TabPanel>
                     <TabPanel Name="PrivacyPolicy">
                         <TenantPrivacyPolicy AppService="TenantSettingsAppService"></TenantPrivacyPolicy>
