--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantSettings.razor
@@ -9,12 +9,9 @@
 @using Kooco.Pikachu.TenantManagement
 @using Volo.Abp.AspNetCore.Components.Notifications
 @using Volo.Abp.AspNetCore.Components.Web
-@attribute [Authorize(PikachuPermissions.TenantSettings.Default)]
+@attribute [Authorize(PikachuPermissions.TenantSettings.Edit)]
 @inherits PikachuComponentBase
-@inject NavigationManager NavigationManager
-@inject AbpBlazorMessageLocalizerHelper<PikachuResource> LH
 @inject ITenantSettingsAppService TenantSettingsAppService
-@inject IUiNotificationService UiNotificationService
 
 <Div Class="rounded-cards tenant-settings">
     <Card>
@@ -30,46 +27,34 @@
             </Div>
         </CardBody>
     </Card>
-    <Form>
-        <Validations @ref="@ValidationsRef" Model="@Entity" ValidateOnLoad="false">
-            <Tabs SelectedTab="@SelectedTab" SelectedTabChanged="@OnSelectedTabChanged" RenderMode="TabsRenderMode.LazyLoad">
-                <Items>
-                    <Tab Name="TenantInformation">@L["TenantInformation"]</Tab>
-                    <Tab Name="CustomerServiceInformation">@L["CustomerServiceInformation"]</Tab>
-                    <Tab Name="PrivacyPolicy">@L["PrivacyPolicy"]</Tab>
-                    <Tab Name="FrontendInformation">@L["FrontendInformation"]</Tab>
-                    <Tab Name="SocialMedia">@L["SocialMedia"]</Tab>
-                    <Tab Name="GoogleTagManager">@L["GoogleTagManager"]</Tab>
-                </Items>
-                <Content>
-                    <TabPanel Name="TenantInformation">
-                        <TenantInformation AppService="TenantSettingsAppService"></TenantInformation>
-                    </TabPanel>
-                    <TabPanel Name="CustomerServiceInformation">
-                        <TenantCustomerService AppService="TenantSettingsAppService"></TenantCustomerService>
-                    </TabPanel>
-                    <TabPanel Name="PrivacyPolicy">
-                        <TenantPrivacyPolicy AppService="TenantSettingsAppService"></TenantPrivacyPolicy>
-                    </TabPanel>
-                    <TabPanel Name="FrontendInformation">
-                        <TenantFrontendInformation AppService="TenantSettingsAppService"></TenantFrontendInformation>
-                    </TabPanel>
-                    <TabPanel Name="SocialMedia">
-                        <TenantSocialMedia AppService="TenantSettingsAppService"></TenantSocialMedia>
-                    </TabPanel>
-                    <TabPanel Name="GoogleTagManager">
-                        <TenantGoogleTagManager AppService="TenantSettingsAppService"></TenantGoogleTagManager>
-                    </TabPanel>
-                </Content>
-            </Tabs>
-        </Validations>
-    </Form>
-    @* <Div Class="text-end">
-        <PikachuButton Class="pk-btn-transparent" Disabled="IsLoading" Loading="IsCancelling" Clicked="CancelAsync">
-            @L["Cancel"]
-        </PikachuButton>
-        <PikachuButton Class="pk-btn-primary" Disabled="IsCancelling" Loading="IsLoading" Clicked="UpdateAsync">
-            @L["Update"]
-        </PikachuButton>
-    </Div> *@
+    <Tabs SelectedTab="@SelectedTab" SelectedTabChanged="@OnSelectedTabChanged" RenderMode="TabsRenderMode.LazyLoad">
+        <Items>
+            <Tab Name="TenantInformation">@L["TenantInformation"]</Tab>
+            <Tab Name="CustomerServiceInformation">@L["CustomerServiceInformation"]</Tab>
+            <Tab Name="PrivacyPolicy">@L["PrivacyPolicy"]</Tab>
+            <Tab Name="FrontendInformation">@L["FrontendInformation"]</Tab>
+            <Tab Name="SocialMedia">@L["SocialMedia"]</Tab>
+            <Tab Name="GoogleTagManager">@L["GoogleTagManager"]</Tab>
+        </Items>
+        <Content>
+            <TabPanel Name="TenantInformation">
+                <TenantInformation AppService="TenantSettingsAppService"></TenantInformation>
+            </TabPanel>
+            <TabPanel Name="CustomerServiceInformation">
+                <TenantCustomerService AppService="TenantSettingsAppService"></TenantCustomerService>
+            </TabPanel>
+            <TabPanel Name="PrivacyPolicy">
+                <TenantPrivacyPolicy AppService="TenantSettingsAppService"></TenantPrivacyPolicy>
+            </TabPanel>
+            <TabPanel Name="FrontendInformation">
+                <TenantFrontendInformation AppService="TenantSettingsAppService"></TenantFrontendInformation>
+            </TabPanel>
+            <TabPanel Name="SocialMedia">
+                <TenantSocialMedia AppService="TenantSettingsAppService"></TenantSocialMedia>
+            </TabPanel>
+            <TabPanel Name="GoogleTagManager">
+                <TenantGoogleTagManager AppService="TenantSettingsAppService"></TenantGoogleTagManager>
+            </TabPanel>
+        </Content>
+    </Tabs>
 </Div>
