--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantInformation.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantInformation.razor
@@ -14,6 +14,16 @@
                     <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
                         <Validation MessageLocalizer="@LH.Localize">
                             <Field>
+                                <FieldLabel>@L["ShortCode"]<Span> *</Span></FieldLabel>
+                                <TextEdit MaxLength="8" @bind-Text="Entity.ShortCode">
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </TextEdit>
+                            </Field>
+                        </Validation>
+                        <Validation MessageLocalizer="@LH.Localize">
+                            <Field>
                                 <FieldLabel>@L["Link"]<Span> *</Span></FieldLabel>
                                 <TextEdit @bind-Text="Entity.TenantUrl">
                                     <Feedback>
